--- a/webDevLab/Cummulative1/Cummulative1/Cummulative1.csproj
+++ b/webDevLab/Cummulative1/Cummulative1/Cummulative1.csproj
@@ -268,6 +268,8 @@
     <Content Include="Views\Teacher\TeacherShow.cshtml" />
     <Content Include="Views\Teacher\DelTeacher.cshtml" />
     <Content Include="Views\Teacher\DeleteConfirm.cshtml" />
+    <Content Include="Views\Teacher\AddTeacher.cshtml" />
+    <Content Include="Views\Teacher\CreateTeacher.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
