Update functionality added to my MVP, just needed to add code quality and the CRUD Operation is completed for the MVP

--- a/webDevLab/Cummulative1/Cummulative1/Cummulative1.csproj
+++ b/webDevLab/Cummulative1/Cummulative1/Cummulative1.csproj
@@ -270,6 +270,8 @@
     <Content Include="Views\Teacher\DeleteConfirm.cshtml" />
     <Content Include="Views\Teacher\AddTeacher.cshtml" />
     <Content Include="Views\Teacher\CreateTeacher.cshtml" />
+    <Content Include="Views\Teacher\EditTeacher.cshtml" />
+    <Content Include="Views\Teacher\UpdateTeacher.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
