--- a/capstone/NaijaCA-Forum/NaijaCA-Forum/NaijaCA-Forum.csproj
+++ b/capstone/NaijaCA-Forum/NaijaCA-Forum/NaijaCA-Forum.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\MemberDataController.cs" />
     <Compile Include="Controllers\ProvinceDataController.cs" />
+    <Compile Include="Controllers\ThreadController.cs" />
     <Compile Include="Controllers\ThreadDataController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -228,6 +229,14 @@
     <Compile Include="Migrations\202306070423219_thread-table-creation-1.designer.cs">
       <DependentUpon>202306070423219_thread-table-creation-1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202306172213372_title-added-thread.cs" />
+    <Compile Include="Migrations\202306172213372_title-added-thread.designer.cs">
+      <DependentUpon>202306172213372_title-added-thread.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202306191652302_datetime-updated.cs" />
+    <Compile Include="Migrations\202306191652302_datetime-updated.designer.cs">
+      <DependentUpon>202306191652302_datetime-updated.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\City.cs" />
@@ -236,6 +245,9 @@
     <Compile Include="Models\Member.cs" />
     <Compile Include="Models\Province.cs" />
     <Compile Include="Models\Thread.cs" />
+    <Compile Include="Models\ViewModels\ProvinceCity.cs" />
+    <Compile Include="Models\ViewModels\ProvinceCityUpdate.cs" />
+    <Compile Include="Models\ViewModels\ThreadMember.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -248,6 +260,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="JavaScripts\JavaScript.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="libman.json" />
@@ -307,9 +320,18 @@
     <Content Include="Views\Member\Error.cshtml" />
     <Content Include="Views\Member\Edit.cshtml" />
     <Content Include="Views\Member\DeletePrompt.cshtml" />
+    <Content Include="Views\Thread\List.cshtml" />
+    <Content Include="Views\Thread\Details.cshtml" />
+    <Content Include="Views\Thread\Error.cshtml" />
+    <Content Include="Views\Thread\New.cshtml" />
+    <Content Include="Views\Thread\Edit.cshtml" />
+    <Content Include="Views\Thread\DeletePrompt.cshtml" />
+    <Content Include="Views\Member\Resources.cshtml" />
+    <Content Include="Views\Member\BecomeAMember.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -351,6 +373,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202306070423219_thread-table-creation-1.resx">
       <DependentUpon>202306070423219_thread-table-creation-1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306172213372_title-added-thread.resx">
+      <DependentUpon>202306172213372_title-added-thread.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306191652302_datetime-updated.resx">
+      <DependentUpon>202306191652302_datetime-updated.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
